# sudoservice

./: Cargo.toml  README.md
.github/workflows/: check.yaml
src/: error.rs  lib.rs  service.rs  systemd.rs
src/systemd/: exec.rs  install.rs  macros.rs  mod.rs  service.rs  unit.rs
