[package]
name = "sudoservice"
version = "0.2.0"
edition = "2024"
authors = ["Nikola Jokic <jokicnikola07@gmail.com>"]
description = "Rust library interacting with service managers"
keywords = ["service", "systemd", "systemctl"]
repository = "https://github.com/nikola-jokic/sudoservice"
license = "MIT"

[dependencies]
which = "8"
thiserror = "2"

[features]
systemd = []
